# Forge

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
.github/workflows/: ci.yml
src/: main.cpp
src/ast/: ArrayInitializer.h  custom_types.h  exprs.h  program.h  stmts.h
src/common/: helper.h
src/diagnostics/: DiagnosticEngine.cpp  DiagnosticEngine.h  Diagnostics.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/optimizer/: constant_folder.cpp  constant_folder.h  dead_code_eliminator.cpp  dead_code_eliminator.h  optimizer.cpp  optimizer.h
src/optimizer/ast/: dead_code_eliminator.cpp
src/parser/: parser.cpp  parser.h  parser_common.cpp  parser_expression.cpp  parser_functions.cpp  parser_loops.cpp  parser_statement.cpp  parser_topLevel.cpp
src/semantics/: scope.cpp  scope.h  semantics.cpp  semantics.h  type_helper.cpp
src/types/: Datatypes.h  ParsedTypes.h  TypeContext.cpp  TypeContext.h  Types.h  type_utils.cpp  type_utils.h
tests/: CMakeLists.txt
tests/common/: test_utils.cpp  test_utils.h
tests/lexer/: lexer_comments.cpp  lexer_diagnostics.cpp  lexer_identifiers.cpp  lexer_keywords.cpp  lexer_literals.cpp  lexer_operators.cpp  lexer_symbol.cpp  lexer_whitespaces.cpp
tests/parser/: parser_declaration.cpp  parser_errors.cpp  parser_expressions.cpp  parser_function_types.cpp  parser_functions.cpp  parser_loops.cpp
tests/semantics/: semantics_array_access.cpp  semantics_array_initializers.cpp  semantics_assignment.cpp  semantics_binary_expr.cpp  semantics_break_continue.cpp  semantics_control_flow.cpp  semantics_function_calls.cpp  semantics_global_variables.cpp  semantics_identifiers.cpp  semantics_literals.cpp  semantics_member_access.cpp  semantics_return.cpp  semantics_typedef.cpp  semantics_unary_expr.cpp  semantics_variable_declaration.cpp
